src/app/globals.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

.gradient-text {
    background: linear-gradient(45deg, #268bd2, #2aa198);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    background-clip: text;
}

.glassmorphism-header {
    background-color: rgba(
        253,
        246,
        227,
        0.8
    ); /* Light background with transparency */
    backdrop-filter: blur(10px);
    -webkit-backdrop-filter: blur(10px);
    border-bottom: 1px solid rgba(147, 161, 161, 0.2);
}

.dark .glassmorphism-header {
    background-color: rgba(
        0,
        43,
        54,
        0.8
    ); /* Dark background with transparency */
    border-bottom: 1px solid rgba(147, 161, 161, 0.2);
}

.hero-bg {
    background: radial-gradient(
        circle at 10% 20%,
        rgba(38, 139, 210, 0.1) 0%,
        rgba(253, 246, 227, 0) 50%
    );
}
.dark .hero-bg {
    background: radial-gradient(
        circle at 10% 20%,
        rgba(38, 139, 210, 0.2) 0%,
        rgba(0, 43, 54, 0) 50%
    );
}

